# jshot

./: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build-macos.yml
.specify/: feature.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
specs/001-region-overlay-active-screen/: plan.md  spec.md  tasks.md
specs/001-region-overlay-active-screen/checklists/: requirements.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: capture.rs  clipboard.rs  mod.rs  storage.rs  upload.rs  window.rs
src-tauri/src/models/: types.rs
src/components/editor/: AnnotationNode.tsx  Canvas.tsx  Toolbar.tsx
src/components/ui/: button.tsx  input.tsx
src/lib/: canvas.ts  logger.ts
src/services/: captureController.ts  events.ts  storage.ts  tauri.ts  upload.ts
src/stores/: editorStore.ts  historyStore.ts  screenshotStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: annotation.ts  api.ts  index.ts  screenshot.ts  settings.ts
src/windows/: EditorWindow.tsx  HistoryWindow.tsx  MainWindow.tsx  OverlayWindow.tsx  SettingsWindow.tsx
