[package]
name = "jshot"
version = "0.1.0"
description = "JShot - fast screenshot, annotate & share"
authors = ["JenlutSpace"]
edition = "2021"

[lib]
name = "jshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.14"
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
